[gd_scene load_steps=3 format=3 uid="uid://dtntstrceesaa"]

[ext_resource type="Script" path="res://summon_button.gd" id="1_wjstv"]
[ext_resource type="Texture2D" uid="uid://b8frlh3w52834" path="res://items/raw_material/coral.png" id="2_wc6kc"]

[node name="SummonButton" type="ColorRect"]
custom_minimum_size = Vector2(16, 16)
color = Color(0.145098, 0.145098, 0.145098, 0.67451)
script = ExtResource("1_wjstv")
can_summon_color = Color(0.1825, 0.73, 0.1825, 1)
cannot_summon_color = Color(0.760784, 0.168627, 0.168627, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wc6kc")

[node name="UI" type="ColorRect" parent="."]
visible = false
z_index = 1
layout_mode = 0
offset_left = -71.0
offset_top = 20.0
offset_right = 97.0
offset_bottom = 95.0
color = Color(0, 0, 0, 1)

[node name="UpgradeTitle" type="Label" parent="UI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 3.0
offset_bottom = 16.0
grow_horizontal = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_type_variation = &"LargeLabel"
text = "OTHERWORLDLY O2 TANK"
horizontal_alignment = 1

[node name="UpgradeDescription" type="Label" parent="UI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -18.5
offset_bottom = -5.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "get some more 02 bruh"
horizontal_alignment = 1

[node name="Requires" type="Label" parent="UI"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -38.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Summon Recipe"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CanSummonLabel" type="Label" parent="UI"]
unique_name_in_owner = true
modulate = Color(0.223529, 0.560784, 0.172549, 1)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -20.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Can Summon"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RequirementsHBox" type="HBoxContainer" parent="UI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -34.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="UI/RequirementsHBox"]
layout_mode = 2
texture = ExtResource("2_wc6kc")
expand_mode = 3
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="UI/RequirementsHBox"]
layout_mode = 2
texture = ExtResource("2_wc6kc")
expand_mode = 3
stretch_mode = 4

[node name="TextureRect3" type="TextureRect" parent="UI/RequirementsHBox"]
layout_mode = 2
texture = ExtResource("2_wc6kc")
expand_mode = 3
stretch_mode = 4

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
